--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
   <head>
     <meta charset="utf-8">
     <title>gitHub test</title>
+    <link rel="stylesheet" href="D:\Usuari\Documents\GitHub\Hello-World\style.css">
   </head>
   <body>
-
+<header>
+  <h1>hi</h1>
+</header>
   </body>
 </html>
